--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h4>Sieh-chuen Huang</h4>
@@ -110,7 +110,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h4>Hsuan-lei Shao</h4>
@@ -122,7 +122,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h4>Tzu-ying Yang</h4>
@@ -134,7 +134,7 @@
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h4>Chih-chuan Fan</h4>
