--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
             filter: blur(3px);
         }
         
-        .member-img {
-            height: 70%;
-            overflow: hidden;
-        }
-        
         .member:hover .member-info-pic {
             transform: translate(-50%, -50%);
             opacity: 1;
@@ -106,8 +101,23 @@
 
     <main id="main">
         <!-- ======= Services Section ======= -->
+        <section id="student-section" class="team section-bg">
 
+            <div class="container" data-aos="fade-up">
+                <div class="section-title">
+                    <h2>Student</h2>
+                    <p>Homework from student.</p>
+                </div>
+        </section>
 
+        <section id="student-section" class="team section-bg">
+
+            <div class="container" data-aos="fade-up">
+                <div class="section-title">
+                    <h2>若干授課片段</h2>
+                    <p>Homework from student.</p>
+                </div>
+        </section>
         <!-- ======= Team Section ======= -->
         <section id="teacher-section" class="team section-bg">
 
@@ -118,7 +128,7 @@
                 </div>
 
                 <div class="row justify-content-around" id="member-div">
-                    <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
@@ -132,7 +142,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
@@ -148,7 +158,7 @@
                     </div>
                     <p></p>
 
-                    <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
@@ -162,7 +172,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
