--- a/index.html
+++ b/index.html
@@ -101,15 +101,45 @@
 
     <main id="main">
         <!-- ======= Services Section ======= -->
-        <section id="student-section" class="team section-bg">
 
+        <section class="about-video">
             <div class="container" data-aos="fade-up">
                 <div class="section-title">
                     <h2>Student</h2>
                     <p>Homework from student.</p>
                 </div>
-        </section>
+                <div class="row">
 
+                    <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+                        <img src="./assets/images/hw.png" class="img-fluid" alt="">
+                    </div>
+
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>學生作業範例1</h3>
+                        <p>
+                            本學生範例是以強權外交，並從從「兩大革命家」看第二年結束、從「現實政治自食惡果」看第三年結束、從「步向毀滅的機制」看第四年結束、從「歐洲均勢」看第五年總結。來做分析
+                        </p>
+                        <a href="./assets/homeworks/homework1.html" style="text-decoration: none;">Read MORE  <i class="bi bi-box-arrow-right"></i> </a>
+                    </div>
+                </div>
+                <p></p>
+                <div class="row">
+
+                    <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+                        <img src="./assets/images/hw2.png" class="img-fluid" alt="">
+                    </div>
+
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>學生作業範例2</h3>
+                        <p>
+                            本學生範例是以東亞政經模擬實，並從策略守住原有的領土、擴張領土（荷蘭，比利時、防止奧國侵越，來做分析、別且檢討出結論預估錯敵人、交錯朋友、英法德三國緊張關係
+                        </p>
+                        <a href="./assets/homeworks/homework2.html" style="text-decoration: none;">Read MORE  <i class="bi bi-box-arrow-right"></i> </a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
         <section id="student-section" class="team section-bg">
 
             <div class="container" data-aos="fade-up">
