--- a/index.html
+++ b/index.html
@@ -149,75 +149,62 @@
                 </div>
         </section>
         <!-- ======= Team Section ======= -->
-        <section id="teacher-section" class="team section-bg">
-
+        <section id="about-video" class="about-video">
             <div class="container" data-aos="fade-up">
-                <div class="section-title">
-                    <h2>Members</h2>
-                    <p>There is a senetnce from teacher.</p>
-                </div>
-
-                <div class="row justify-content-around" id="member-div">
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="member-info-pic">
-                                <h4>There is a senetnce from teacher.</h4>
-                            </div>
-                            <div class="member-info">
-                                <h4>Sieh-chuen Huang</h4>
-                            </div>
-                        </div>
+                <div class="row">
+                    <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
+                        <img src="assets/images/pic_huang.jpg" class="img-fluid" alt="" width=400>
                     </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="member-info-pic">
-                                <h4>There is a senetnce from teacher.</h4>
-                            </div>
-                            <div class="member-info">
-                                <h4>Hsuan-lei Shao</h4>
-
-                            </div>
-                        </div>
-                    </div>
-                    <p></p>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="member-info-pic">
-                                <h4>There is a senetnce from teacher.</h4>
-                            </div>
-                            <div class="member-info">
-                                <h4>Tzu-ying Yang</h4>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="member-info-pic">
-                                <h4>There is a senetnce from teacher.</h4>
-                            </div>
-                            <div class="member-info">
-                                <h4>Chih-chuan Fan</h4>
-                            </div>
-                        </div>
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>About</h3>
+                        <p>
+                            Professor Sieh-Chuen Huang is an associate professor of civil law. She received her Bachelor
+                            Degree of
+                            Laws from NTU, Taiwan (2001) and the master and doctoral degree (Doctor of Juridical
+                            Science) from
+                            Hokkaido University, Japan (2004 and 2006). 
+                            <ul>
+                                <li class="fst-italic"><i class="bi bi-check-all"></i>Imformation:
+                                    http://homepage.ntu.edu.tw/~schhuang/English.html/.</li>
+                            </ul>
+                        </p>
+                        <h3>Teaching philosophy</h3>
+                        <p>
+                            教學理念....
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!-- End About Video Section -->
+        <!-- ======= About Video Section ======= -->
+        <section id="about-video" class="about-video">
+            <div class="container" data-aos="fade-up">
+                <div class="row">
+                    <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+                        <h3>About</h3>
+                        <p>
+                            Hsuan-lei Shao is a Ph.D., an associate Prof., the Department of Eastasia Studies (DEAS), National
+                            Taiwan Normal
+                            University(NTNU). He works on digital humanities/ social science research. He can do
+                            "textmining(Eng, Chn,
+                            Jpn), Deep learning/AI, Field-studies, R/python/html programming". He loves to explore
+                            knowledges. He has
+                            an opened mind and wish to cooperate with any fields scholars.
+                        </p>
+                        <ul>
+                            <li class="fst-italic"><i class="bi bi-check-all"></i>Email: hlshao2@gmail.com</li>
+                        </ul>
+                        <h3>Teaching philosophy</h3>
+                        <p>
+                            教學理念....
+                        </p>
+                    </div>
+                    <div class="col-lg-6 video-box align-self-center" data-aos="fade-right" data-aos-delay="100">
+                        <img src="assets/images/pic_cat.jpg" class="img-fluid" alt="" width=400>
+                    </div>
+                </div>
+            </div>
+        </section><!-- End About Video Section -->
         <!-- End Team Section -->
 
 
