--- a/index.html
+++ b/index.html
@@ -573,12 +573,12 @@
     </div>
     <!-- End Contact -->
 
-    <footer class="footer-copy">
+    <footer class="footer-copy" style="background-color: rgb(170, 170, 170);">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row" >
                 <div class="col-md-12">
-                    <p>2018 &copy; Elegant. Website Designed by <a href="http://w3Template.com" target="_blank" rel="dofollow">W3
-                            Template</a></p>
+                    <p>Resource and Thanks: The Template: 2018 &copy; Elegant. Website Designed by <a href="http://w3Template.com" target="_blank" rel="dofollow">W3
+                            Template</a>. The Movie: <a href="https://www.youtube.com/watch?v=gHCDvdCaJhI" target="_blank" rel="dofollow">Wethe15 (the Paralympic Games)</a></p>
                 </div>
             </div>
         </div>
