fellow web and makers

--- a/index.html
+++ b/index.html
@@ -531,38 +531,52 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-title text-center">
-                    <h3>Our Fellows and More Information of Us</h3>
+                    <h3>Our Fellows and More Information</h3>
                     <p>See More Websites of Our Fellows Related Projects.</p>
                     <span class="section-title-line"></span>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
                     <div class="service-box bg-white text-center">
-                        <div class="icon"> <i class="fas fa-comments"></i> </div>
+                        <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/ufothumb.jpg" alt="image"> </div>
+                        <div class="icon-text">
+                            <h4 class="title-box">UFO Project Office</h4>
+                            <p>University FOresight Education Project (UFO Project) is a pilot, experimental, foresight and inter-disciplinary multiyear education project, initiated by the Department of Information and Technology Education, Ministry of Education under its midterm initiatives.</p>
+                            <a href="https://ufo-edu.web2.ncku.edu.tw/index.php?Lang=en" class="anchor-btn">See more <i
+                                    class="fas fa-arrow-right pd-lt-10"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+                    <div class="service-box bg-white text-center">
+                        <div class="icon" style="width:80%; height:80%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/lawcolledge.jfif" alt="image"></div>
                         <div class="icon-text">
                             <h4 class="title-box">Website of Siehchuen Huang</h4>
                             <p>Professor Sieh-Chuen Huang is an associate professor of civil law. She received her Bachelor Degree of Laws from NTU, Taiwan.</p>
-                            <a href="https://ntnu-lab.github.io/" class="anchor-btn">See more <i
+                            <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html"  class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
                     <div class="service-box bg-white text-center">
-                        <div class="icon"> <i class="fas fa-comments"></i> </div>
+                        <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/legal_analytics.png" alt="image"> </div>
                         <div class="icon-text">
-                            <h4 class="title-box">Website of Hsuanlei Shao</h4>
-                            <p>He is a Ph.D., an associate Prof., the Department of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
-                            <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html" class="anchor-btn">See more <i
+                            <h4 class="title-box">Legal Analytics</h4>
+                            <p>Another website co-teach class of the UFO-project. This focus on hybriding with legal studies and high tech (deep/machine learing). Designed by H.L.Shao(NTNU) and S.C.Huang(NTU). </p>
+                            <a href="https://web.ntnu.edu.tw/~hlshao/107_DH/index.html" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
                     <div class="service-box bg-white text-center">
-                        <div class="icon"> <i class="fas fa-comments"></i> </div>
+                        <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/digikeys.webp" alt="image"> </div>
                         <div class="icon-text">
-                            <h4 class="title-box">Digital Humanities and Legal Analytics</h4>
-                            <p>Digital Humanities feat. Legal Analytics by H.L.Shao(NTNU) and S.C.Huang(NTU).</p>
+                            <h4 class="title-box">Dr. Prof. Hsuanlei Shao</h4>
+                            <p>He is a member of the UFO-project. Also, this Website Maker, with two engineers: <b>Tsuying Yang, Chihchuan Fang</b> belong the Lab. Digital Humanities, NTNU</p>
+                            <p>Ph.D., an associate Prof., the Department of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
                             <a href="https://ntnu-lab.github.io/" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
