renew fellow web and makers

--- a/index.html
+++ b/index.html
@@ -550,8 +550,8 @@
                     <div class="service-box bg-white text-center">
                         <div class="icon" style="width:80%; height:80%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/lawcolledge.jfif" alt="image"></div>
                         <div class="icon-text">
-                            <h4 class="title-box">Website of Siehchuen Huang</h4>
-                            <p>Professor Sieh-Chuen Huang is an associate professor of civil law. She received her Bachelor Degree of Laws from NTU, Taiwan.</p>
+                            <h4 class="title-box">Prof. Dr. Siehchuen Huang (LLNTU) </h4>
+                            <p>Professor Sieh-Chuen Huang is one of memtors of this class, a professor of civil law, National Taiwan University. She is the Host of the LLNTU--Lab. of Legal Analytics, Which devote itself on AI-legal Studies and win international legal information competition 2019.</p>
                             <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html"  class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
@@ -561,7 +561,7 @@
                     <div class="service-box bg-white text-center">
                         <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/legal_analytics.png" alt="image"> </div>
                         <div class="icon-text">
-                            <h4 class="title-box">Legal Analytics</h4>
+                            <h4 class="title-box">The Class, Legal Analytics</h4>
                             <p>Another website co-teach class of the UFO-project. This focus on hybriding with legal studies and high tech (deep/machine learing). Designed by H.L.Shao(NTNU) and S.C.Huang(NTU). </p>
                             <a href="https://web.ntnu.edu.tw/~hlshao/107_DH/index.html" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
@@ -574,9 +574,9 @@
                     <div class="service-box bg-white text-center">
                         <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/digikeys.webp" alt="image"> </div>
                         <div class="icon-text">
-                            <h4 class="title-box">Dr. Prof. Hsuanlei Shao</h4>
-                            <p>He is a member of the UFO-project. Also, this Website Maker, with two engineers: <b>Tsuying Yang, Chihchuan Fang</b> belong the Lab. Digital Humanities, NTNU</p>
-                            <p>Ph.D., an associate Prof., the Department of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
+                            <h4 class="title-box">Dr. Prof. Hsuanlei Shao, DHNTNU</h4>
+                            <p>He is a member of the UFO-project. Also, this Website Maker, with two engineers: <i><b>Tsuying Yang, Chihchuan Fang</b></i> belong the Lab. Digital Humanities, NTNU</p>
+                            <p>Ph.D., an associate Prof., the Dept. of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
                             <a href="https://ntnu-lab.github.io/" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
