renew fellow web and makers

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                     <div class="service-box bg-white text-center">
                         <div class="icon" style="width:80%; height:80%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/lawcolledge.jfif" alt="image"></div>
                         <div class="icon-text">
-                            <h4 class="title-box">Prof. Dr. Siehchuen Huang (LLNTU) </h4>
+                            <h4 class="title-box">Prof. Dr. Siehchuen Huang and the LLNTU</h4>
                             <p>Professor Sieh-Chuen Huang is one of memtors of this class, a professor of civil law, National Taiwan University. She is the Host of the LLNTU--Lab. of Legal Analytics, Which devote itself on AI-legal Studies and win international legal information competition 2019.</p>
                             <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html"  class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
@@ -574,7 +574,7 @@
                     <div class="service-box bg-white text-center">
                         <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/digikeys.webp" alt="image"> </div>
                         <div class="icon-text">
-                            <h4 class="title-box">Dr. Prof. Hsuanlei Shao, DHNTNU</h4>
+                            <h4 class="title-box">Dr. Prof. Hsuanlei Shao and the DHNTNU</h4>
                             <p>He is a member of the UFO-project. Also, this Website Maker, with two engineers: <i><b>Tsuying Yang, Chihchuan Fang</b></i> belong the Lab. Digital Humanities, NTNU</p>
                             <p>Ph.D., an associate Prof., the Dept. of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
                             <a href="https://ntnu-lab.github.io/" class="anchor-btn">See more <i
