renew fellow web and makers

--- a/index.html
+++ b/index.html
@@ -582,6 +582,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
+                    <div class="service-box bg-white text-center">
+                        <div class="icon"> <i class="fas fa-comments"></i> </div>
+                        <div class="icon-text">
+                            <h4 class="title-box">Website Maker</h4>
+                            <p>Website Architect and Script Maneger: Hsuanlei Shao</p>
+                            <p>Html and Special Effects: Chihchuan Fang</p>
+                            <p>Design and Vision Content: Tsuying Yang</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
