renew fellow web and makers

--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
                         <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/digikeys.webp" alt="image"> </div>
                         <div class="icon-text">
                             <h4 class="title-box">Dr. Prof. Hsuanlei Shao and the DHNTNU</h4>
-                            <p>He is a member of the UFO-project. Also, this Website Maker, with two engineers: <i><b>Tsuying Yang, Chihchuan Fang</b></i> belong the Lab. Digital Humanities, NTNU</p>
-                            <p>Ph.D., an associate Prof., the Dept. of Eastasia Studies (DEAS), National Taiwan Normal University(NTNU). </p>
+                            <p>He is a member of the UFO-project. Also, the host of DHNTNU, the Lab. Digital Humanities, National Taiwan Normal University</p>
+                            <p>Ph.D., an associate Prof., the Dept. of Eastasia Studies (DEAS), NTNU. </p>
                             <a href="https://ntnu-lab.github.io/" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
@@ -587,9 +587,9 @@
                         <div class="icon"> <i class="fas fa-comments"></i> </div>
                         <div class="icon-text">
                             <h4 class="title-box">Website Maker</h4>
-                            <p>Website Architect and Script Maneger: Hsuanlei Shao</p>
-                            <p>Html and Special Effects: Chihchuan Fang</p>
-                            <p>Design and Vision Content: Tsuying Yang</p>
+                            <p>Website Architect and Script Maneger: <i><b>Hsuanlei Shao</b></i></p>
+                            <p>Html and Special Effects: <i><b>Chihchuan Fang</b></i></p>
+                            <p>Design and Vision Content: <i><b>Tsuying Yang</b></i></p>
                         </div>
                     </div>
                 </div>
