--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@
                     <div class="section-info">
                         <div class="sub-title-paragraph">
                             <h4>Prof. Dr. Yee-san Teoh</h4>
-                            <h5>If you have right set of mind and thus you can rule the world. Cheers!</h5>
-                            <p>Forensic and Developmental Psychology Children eyewitness memory, forensic interviewing of children Child abuse and neglect, family violence 2009-2011: Post-doctoral Fellow, Department of Psychology, Brooklyn College, City
-                                University of New York 2011:Adjunct Assistant Professor, Department of Psychology, Brooklyn College, City University of New York
+                            <h5>This course transcends discipline, culture, language, and identity. Together, we learn to communicate better.</h5>
+                            <p>Dr. Yee San Teoh is Associate Professor at the Department of Psychology at National Taiwan University. Her areas of specialization are Developmental and Forensic Psychology. She is particularly interested in identifying best practice interviewing methods with children and persons with intellectual disability. Dr. Teoh regularly provides specialized training in investigative interviewing to legal, social work, and medical professionals. She is also a registered intermediary who assists prosecutors and the criminal courts with the questioning of vulnerable victims and witnesses.
                             </p>
                         </div>
-                        <a href="http://homepage.ntu.edu.tw/~schhuang/English.html" class="anchor-btn">more about <i
+                        <a href="http://www.psy.ntu.edu.tw/index.php/members/faculty/fulltime-faculty/2227-teoh-yee-san" class="anchor-btn">more about <i
                                 class="fas fa-arrow-right pd-lt-10"></i></a>
                     </div>
                 </div>
