--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta property="og:url" content="./images/digikeys.webp" />
+    <meta property="og:title" content="Interdisciplinary Seminar on Decision-Making in Persons with Disabilities" />
 
 </head>
 
@@ -99,8 +100,8 @@
                             <h4>Prof. Dr. Dagmar Brosey</h4>
                             <h5>This seminar brought together people from very distant places to learn from and with each other, to exchange ideas and approaches. It was fantastic to be part of this process.</h5>
                             <p> Dagmar Brosey is a Professor for Civil Law, specialised in Family Law at Cologne University of Applied Sciences (TH Köln Germany). Since 2020 she is Deputy Dean of the Faculty of Applied Social Sciences.</p>
-                            <p>She is doing research with the focus on autonomy and self-determination in adult protection law. She is the author of various articles and reports focusing on issues concerning self-determination,
-                                supported decision-making, legal capacity, advanced directives and legal representation in the  context of German Law of BETREUUNG, mental health care and long term care.</p>
+                            <p>She is doing research with the focus on autonomy and self-determination in adult protection law. She is the author of various articles and reports focusing on issues concerning self-determination, supported decision-making,
+                                legal capacity, advanced directives and legal representation in the context of German Law of BETREUUNG, mental health care and long term care.</p>
                             <p>Dagmar is a member of board of the German Association for BETREUUNG (BGT) und the editor-in-chief of Journal of German Law of BETREUUNG and practice (BtPrax).</p>
                             <p>She was one of the heads of the research team who conducted the study Quality in BETREUNG missioned by the Federal Ministry of Justice and Consumer Protection.</p>
                             <p>
@@ -114,7 +115,9 @@
                         <div class="sub-title-paragraph">
                             <h4>Prof. Dr. Yee-san Teoh</h4>
                             <h5>This course transcends discipline, culture, language, and identity. Together, we learn to communicate better.</h5>
-                            <p>Dr. Yee San Teoh is Associate Professor at the Department of Psychology at National Taiwan University. Her areas of specialization are Developmental and Forensic Psychology. She is particularly interested in identifying best practice interviewing methods with children and persons with intellectual disability. Dr. Teoh regularly provides specialized training in investigative interviewing to legal, social work, and medical professionals. She is also a registered intermediary who assists prosecutors and the criminal courts with the questioning of vulnerable victims and witnesses.
+                            <p>Dr. Yee San Teoh is Associate Professor at the Department of Psychology at National Taiwan University. Her areas of specialization are Developmental and Forensic Psychology. She is particularly interested in identifying best
+                                practice interviewing methods with children and persons with intellectual disability. Dr. Teoh regularly provides specialized training in investigative interviewing to legal, social work, and medical professionals. She
+                                is also a registered intermediary who assists prosecutors and the criminal courts with the questioning of vulnerable victims and witnesses.
                             </p>
                         </div>
                         <a href="http://www.psy.ntu.edu.tw/index.php/members/faculty/fulltime-faculty/2227-teoh-yee-san" class="anchor-btn">more about <i
@@ -134,10 +137,13 @@
                         <div class="sub-title-paragraph">
                             <h4>Prof. Dr. Renate Kosuch</h4>
                             <h5>A wonderful experience of bringing together students as well as supporting cooperation and the ability to look at things from different perspectives.</h5>
-                            <p>Professor Renate Kosuch is a graduate psychologist and professor of social psychology at the Faculty of Applied Social Sciences, TH Köln (University of applied sciences). She is co-director of the master's program “Counseling and Advocacy in Social Law”.</p>
-                            <p>She received her diploma and doctoral degree from University of Hamburg. Trained in person-centered psychotherapy, she is member of the scientific advisory board of the Society for Person-Centered Psychotherapy and Counseling GWG e.V.
-                            </p>   
-                            <p>Her main research and teaching areas are communication psychology; Supported Decision Making (SDM) and relationship quality in Adult Betreuung(stressing the compliance with UNCRPD) ; shame; gender; communication psychology; mental self-regulation and serenity promotion.
+                            <p>Professor Renate Kosuch is a graduate psychologist and professor of social psychology at the Faculty of Applied Social Sciences, TH Köln (University of applied sciences). She is co-director of the master's program “Counseling
+                                and Advocacy in Social Law”.</p>
+                            <p>She received her diploma and doctoral degree from University of Hamburg. Trained in person-centered psychotherapy, she is member of the scientific advisory board of the Society for Person-Centered Psychotherapy and Counseling
+                                GWG e.V.
+                            </p>
+                            <p>Her main research and teaching areas are communication psychology; Supported Decision Making (SDM) and relationship quality in Adult Betreuung(stressing the compliance with UNCRPD) ; shame; gender; communication psychology;
+                                mental self-regulation and serenity promotion.
                             </p>
                         </div>
                         <a href="http://homepage.ntu.edu.tw/~schhuang/English.html" class="anchor-btn">more about <i
@@ -539,7 +545,8 @@
                         <div class="icon" style="width:70%; height:70%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/ufothumb.jpg" alt="image"> </div>
                         <div class="icon-text">
                             <h4 class="title-box">UFO Project Office</h4>
-                            <p>University FOresight Education Project (UFO Project) is a pilot, experimental, foresight and inter-disciplinary multiyear education project, initiated by the Department of Information and Technology Education, Ministry of Education under its midterm initiatives.</p>
+                            <p>University FOresight Education Project (UFO Project) is a pilot, experimental, foresight and inter-disciplinary multiyear education project, initiated by the Department of Information and Technology Education, Ministry of Education
+                                under its midterm initiatives.</p>
                             <a href="https://ufo-edu.web2.ncku.edu.tw/index.php?Lang=en" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
@@ -550,8 +557,9 @@
                         <div class="icon" style="width:80%; height:80%; border-radius:100%; overflow:hidden; margin:0px auto;"> <img src="images/lawcolledge.jfif" alt="image"></div>
                         <div class="icon-text">
                             <h4 class="title-box">Prof. Dr. Siehchuen Huang and the LLNTU</h4>
-                            <p>Professor Sieh-Chuen Huang is one of memtors of this class, a professor of civil law, National Taiwan University. She is the Host of the LLNTU--Lab. of Legal Analytics, Which devote itself on AI-legal Studies and win international legal information competition 2019.</p>
-                            <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html"  class="anchor-btn">See more <i
+                            <p>Professor Sieh-Chuen Huang is one of memtors of this class, a professor of civil law, National Taiwan University. She is the Host of the LLNTU--Lab. of Legal Analytics, Which devote itself on AI-legal Studies and win international
+                                legal information competition 2019.</p>
+                            <a href="http://homepage.ntu.edu.tw/~schhuang/Welcome.html" class="anchor-btn">See more <i
                                     class="fas fa-arrow-right pd-lt-10"></i></a>
                         </div>
                     </div>
@@ -587,7 +595,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Website Maker</h4>
                             <p>Website Architect and Script Maneger: <i><b>Hsuanlei Shao</b></i></p>
-                            <p>Html and Special Effects: <i><b>Chihchuan Fang</b></i></p>
+                            <p>Html and Special Effects: <i><b>Chihchuan Fan</b></i></p>
                             <p>Design and Vision Content: <i><b>Tsuying Yang</b></i></p>
                         </div>
                     </div>
@@ -599,7 +607,7 @@
 
     <footer class="footer-copy" style="background-color: rgb(170, 170, 170);">
         <div class="container-fluid">
-            <div class="row" >
+            <div class="row">
                 <div class="col-md-12">
                     <p>Resource and Thanks: The Template: 2018 &copy; Elegant. Website Designed by <a href="http://w3Template.com" target="_blank" rel="dofollow">W3
                             Template</a>. The Movie: <a href="https://www.youtube.com/watch?v=gHCDvdCaJhI" target="_blank" rel="dofollow">Wethe15 (the Paralympic Games)</a></p>
