--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="./images/digikeys.webp" />
+    <meta property="og:url" content="https://ntnu-lab.github.io/ufo_web/images/digikeys.webp" />
     <meta property="og:title" content="Interdisciplinary Seminar on Decision-Making in Persons with Disabilities" />
 
 </head>
