--- a/index.html
+++ b/index.html
@@ -595,8 +595,7 @@
                         <div class="icon-text">
                             <h4 class="title-box">Website Maker</h4>
                             <p>Website Architect and Script Maneger: <i><b>Hsuanlei Shao</b></i></p>
-                            <p>Html and Special Effects: <i><b>Chihchuan Fan</b></i></p>
-                            <p>Design and Vision Content: <i><b>Tsuying Yang</b></i></p>
+                            <p>Html and Special Effects and Design: <i><b>Tzuying Yang、Chihchuan Fan</b></i></p>
                         </div>
                     </div>
                 </div>
